docs: consistency: `oc` and `prod-cli` preerequisites, additional resources to CR configuration procedures.

--- a/modules/administration-guide/examples/snip_che-upgrading-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/examples/snip_che-upgrading-the-chectl-management-tool.adoc
@@ -1,17 +1,8 @@
-// Module included in the following assemblies:
-//
-// installing-the-{prod-cli}-management-tool
-
-[id="upgrading-the-{prod-cli}-management-tool_{context}"]
-= Upgrading the {prod-cli} management tool
-
-
-You can use the `{prod-cli}` command-line management tool to update the {prod-short} server.
 This section describes how to upgrade the `{prod-cli}` management tool.
 
 .Prerequisites
 
-*  The `{prod-cli}` tool is available. See: xref:installing-the-chectl-management-tool.adoc[]
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
