--- a/modules/administration-guide/pages/configuring-routes.adoc
+++ b/modules/administration-guide/pages/configuring-routes.adoc
@@ -10,8 +10,9 @@ You can configure labels, annotations, and domains for OpenShift Route to work w
 
 .Prerequisites
 
-* An active `oc` session to the destination cluster.
-* `{prod-cli}`
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
+
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
@@ -31,7 +32,6 @@ spec:
       CHE_INFRA_OPENSHIFT_ROUTE_LABELS: <labels> <1>
       CHE_INFRA_OPENSHIFT_ROUTE_HOST_DOMAIN__SUFFIX: <domain> <2>
 ----
-<1> comma separated list of labels that are used by the target ingress controller to filter the set of Routes to service
 <1> A comma-separated list of labels that the target ingress controller uses to filter the set of Routes to service.
 <2> The DNS name serviced by the target ingress controller.
 <3> An unstructured key value map stored with a resource.```
@@ -39,4 +39,6 @@ spec:
 
 .Additional resources
 
-* xref:understanding-the-checluster-custom-resource.adoc[]
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
