--- a/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
+++ b/modules/administration-guide/pages/configuring-the-number-of-workspaces-that-a-user-can-create.adoc
@@ -35,3 +35,10 @@ spec:
       CHE_LIMITS_USER_WORKSPACES_COUNT: "__<number-of-workspaces>__"
 ----
 ====
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
