--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -37,7 +37,7 @@ The following procedure is applicable for already installed and running instance
 
 .Prerequisites
 
-* The `{orch-cli}` tool is available.
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 * Namespace for {prod-short} exists.
 
 .Procedure
