--- a/modules/administration-guide/pages/installing-che-locally.adoc
+++ b/modules/administration-guide/pages/installing-che-locally.adoc
@@ -10,9 +10,9 @@ This section contains instructions for deploying and running {prod} locally, on 
 
 .Prerequisites
 
-
 * A {platforms-name} cluster to deploy {prod-short} on.
-* The `{prod-cli}` management tool is available. See xref:installing-the-chectl-management-tool.adoc[].
+
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Deploying {prod-short} on Minikube in 3 minutes using {prod-cli}
 ++++
