--- a/modules/administration-guide/pages/installing-che-on-minikube.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube.adoc
@@ -13,8 +13,9 @@ WARNING: Remember that single-node {kubernetes} clusters are suited only for tes
 
 .Prerequisites
 
-* `{orch-cli}`. See link:https://kubernetes.io/docs/tasks/tools/#kubectl/[Installing and Setting Up {orch-cli} ].
 * Minikube with {kubernetes} version `{kube-ver-min}` or higher. See link:https://kubernetes.io/docs/tasks/tools/install-minikube/[Installing Minikube].
+
+* `{orch-cli}`. See {orch-cli-link}.
 
 * `{prod-cli}`. See xref:installing-the-chectl-management-tool.adoc[].
 
