--- a/modules/administration-guide/pages/installing-che-on-openshift.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift.adoc
@@ -10,9 +10,9 @@ You can install {prod-short} on OpenShift.
 
 .Prerequisites
 
-* An active `oc` session with administrative access to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
-* `{prod-cli}` is available. See xref:installing-the-chectl-management-tool.adoc[].
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
