--- a/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
+++ b/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
@@ -194,3 +194,10 @@ $ kubectl apply -f che-workspace-pv.yaml -f che-postgres-pv.yaml
 ====
 You must provide valid file permissions for volumes. You can do it using storage class configuration or manually. To manually define permissions, define `storageClass#mountOptions` `uid` and `gid`. PostgreSQL volume requires `uid=26` and `gid=26`.
 ====
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
