--- a/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/the-woopra-telemetry-plugin.adoc
@@ -1,6 +1,6 @@
 [id="the-woopra-telemetry-plugin"]
 // = The Woopra telemetry plugin
-:_content-type: REFERENCE
+:_content-type: PROCEDURE
 :navtitle: The Woopra telemetry plug-in
 :keywords: extensions, telemetry
 :page-aliases: extensions:the-woopra-telemetry-plug-in
@@ -19,7 +19,13 @@ The devfile v2 for the plug-in, link:https://raw.githubusercontent.com/che-incub
 - `WOOPRA_DOMAIN_ENDPOINT` - If you prefer not to pass in the Woopra domain directly, the plug-in will get it from a supplied HTTP endpoint that returns the Woopra Domain.
 - `SEGMENT_WRITE_KEY_ENDPOINT` - If you prefer not to pass in the Segment write key directly, the plug-in will get it from a supplied HTTP endpoint that returns the Segment write key.
 
-To enable the Woopra plug-in on the {prod} installation, deploy the `plugin.yaml` devfile v2 file to an HTTP server with the environment variables set correctly. Then, set the `spec.server.workspaceDefaultPlugins` field of your `CheCluster` custom resource:
+To enable the Woopra plug-in on the {prod} installation:
+
+.Procedure
+
+* Deploy the `plugin.yaml` devfile v2 file to an HTTP server with the environment variables set correctly.
+
+. Set the `spec.server.workspaceDefaultPlugins` field of your `CheCluster` custom resource:
 
 [source,yaml]
 ----
@@ -35,3 +41,10 @@ spec:
 
 <1> The `editorId` to set the telemetry plug-in for.
 <2> The URL to the telemetry plug-in's devfile v2 definition.
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
