--- a/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
+++ b/modules/administration-guide/pages/uninstalling-che-by-using-chectl.adoc
@@ -11,7 +11,10 @@ To uninstall an instance of {prod} that was installed using the `{prod-cli}` too
 .Prerequisites
 
 * The `{prod-cli}` tool was used to install the {prod-short} instance on {platforms-name}.
-* The `{prod-cli}` and `{orch-cli}` tools are available.
+
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
