--- a/modules/administration-guide/pages/upgrading-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/pages/upgrading-the-chectl-management-tool.adoc
@@ -4,6 +4,7 @@
 :page-aliases:
 
 [id="upgrading-the-{prod-cli}-management-tool_{context}"]
+= Upgrading the {prod-cli} management tool
 
-include::example$proc_{project-context}-upgrading-the-chectl-management-tool.adoc[]
+include::example$snip_{project-context}-upgrading-the-chectl-management-tool.adoc[]
 
