--- a/modules/administration-guide/partials/assembly_uninstalling-the-che-instance-and-the-che-operator.adoc
+++ b/modules/administration-guide/partials/assembly_uninstalling-the-che-instance-and-the-che-operator.adoc
@@ -7,7 +7,8 @@ After uninstalling the {devworkspace} Operator, uninstall the {prod-short} insta
 
 * OperatorHub was used to install the {prod-short} instance on {ocp} or {osd}.
 
-* An active `oc` session with administrative permissions to the OpenShift cluster hosting the {prod-short} instance to uninstall. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html#installing-openshift-cli[Installing the OpenShift CLI].
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
+
 
 .Procedure
 
