--- a/modules/administration-guide/partials/con_logging-http-traffic.adoc
+++ b/modules/administration-guide/partials/con_logging-http-traffic.adoc
@@ -13,3 +13,10 @@ server:
   customCheProperties:
     CHE_LOGGER_CONFIG: "che.infra.request-logging=TRACE"
 ----
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
