--- a/modules/administration-guide/partials/proc_applying-the-bitbucket-application-link-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-bitbucket-application-link-secret.adoc
@@ -10,12 +10,15 @@
 Prepare and apply the Bitbucket application link Secret.
 
 .Prerequisites
+
 * Setting up the Bitbucket application link is completed.
+
 * The following Base64-encoded files, which were created when setting up the Bitbucket application link, are prepared:
 ** `privatepkcs8-stripped.pem`
 ** `bitbucket_consumer_key`
 ** `bitbucket-shared-secret`
-* `{orch-cli}` is installed in the operating system you are using. See {link-installing-orch-cli}.
+
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 .Procedure
 
@@ -46,7 +49,7 @@ data:
 <4> The Base64-encoded content of the `bitbucket_consumer_key` file.
 <5> The Base64-encoded content of the `bitbucket-shared-secret` file.
 
-. Apply the Secret by entering it with `{orch-cli}` on a command line:
+. Apply the Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
