--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -10,11 +10,14 @@
 Prepare and apply the GitHub OAuth App Secret.
 
 .Prerequisites
+
 * Setting up the GitHub OAuth App is completed.
+
 * The Base64-encoded values, which were generated when setting up the GitHub OAuth App, are prepared:
 ** *GitHub OAuth Client ID*
 ** *GitHub OAuth Client Secret*
-* `{orch-cli}` is installed in the operating system you are using. See {link-installing-orch-cli}.
+
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 .Procedure
 
@@ -41,7 +44,7 @@ data:
 <2> The Base64-encoded *GitHub OAuth Client ID*.
 <3> The Base64-encoded *GitHub OAuth Client Secret*.
 
-. Apply the Secret by entering it with `{orch-cli}` on a command line:
+. Apply the Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
