--- a/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-gitlab-authorized-application-secret.adoc
@@ -10,12 +10,14 @@
 Prepare and apply the GitLab-authorized application Secret.
 
 .Prerequisites
+
 * Setting up the GitLab authorized application is completed.
+
 * The Base64-encoded values, which were generated when setting up the GitLab authorized application, are prepared:
 ** *GitLab Application ID*
 ** *GitLab Client Secret*
-* `{orch-cli}` is installed in the operating system you are using. See {link-installing-orch-cli}.
 
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 .Procedure
 
@@ -44,7 +46,7 @@ data:
 <3> The Base64-encoded *GitLab Application ID*.
 <4> The Base64-encoded *GitLab Client Secret*.
 
-. Apply the Secret by entering it with `{orch-cli}` on a command line:
+. Apply the Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
