--- a/modules/administration-guide/partials/proc_configuring-server-logging.adoc
+++ b/modules/administration-guide/partials/proc_configuring-server-logging.adoc
@@ -17,3 +17,10 @@ server:
   customCheProperties:
     CHE_LOGGER_CONFIG: "org.eclipse.che.api.workspace.server.WorkspaceManager=DEBUG"
 ----
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
