--- a/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
+++ b/modules/administration-guide/partials/proc_mounting-a-secret-or-a-configmap-as-a-file-into-a-container.adoc
@@ -90,4 +90,11 @@ data:
 
 This results in a file named `ca.crt` being mounted at the `/data` path of {prod-short} container.
 
-IMPORTANT: To make the changes in a {prod-short} container visible, recreate the object entirely. 
+IMPORTANT: To make the changes in a {prod-short} container visible, recreate the object entirely.
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
