--- a/modules/administration-guide/partials/proc_uninstalling-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/partials/proc_uninstalling-the-devworkspace-operator.adoc
@@ -7,16 +7,9 @@ To uninstall the {devworkspace} Operator and related Custom Resources:
 
 * OperatorHub was used to install the {prod-short} instance on {ocp} or {osd}.
 
-* You have access to the OpenShift cluster of your organization's {prod-short} instance.
-
-* The OpenShift CLI (`oc`) is installed in the operating system you are using. See link:https://docs.openshift.com/container-platform/4.10/cli_reference/openshift_cli/getting-started-cli.html#installing-openshift-cli[Installing the OpenShift CLI].
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
 .Procedure
-
-. Optional: Sign in to the cluster.
-
-+
-`$ oc login -u __<username>__ -p __<password>__ __ <cluster_url>__`
 
 . Remove the {devworkspace} Custom Resources used by the Operator, along with any related {orch-name} objects such as Deployments:
 
