--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -6,7 +6,7 @@
 
 * The OpenShift cluster is ready to operate on a restricted network, and the OpenShift control plane has access to the public Internet. See link:https://docs.openshift.com/container-platform/latest/operators/admin/olm-restricted-networks.html[Using Operator Lifecycle Manager on restricted networks].
 
-* An active `oc` session with administrative access to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
+* An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
 * An active `oc` session to the `registry.redhat.io` Red Hat Ecosystem Catalog. See: link:https://access.redhat.com/RegistryAuthentication[Red Hat Container Registry authentication].
 
