--- a/modules/end-user-guide/pages/using-a-git-credentials-store.adoc
+++ b/modules/end-user-guide/pages/using-a-git-credentials-store.adoc
@@ -13,12 +13,13 @@ When you apply the Secret, a Git configuration file with the path to the mounted
 
 .Prerequisites
 
-* You have CLI or GUI access to the {orch-name} cluster of your organization's {prod-short} instance.
-* For CLI users: The `{orch-cli}` and link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+
+* link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
 
 .Procedure
-. In your home directory, locate and open your `.git-credentials` file if you already have it. Alternatively, if you do not have this file, save a new `.git-credentials` file, using the link:https://git-scm.com/docs/git-credential-store#_storage_format[Git credentials storage format]. Each credential is stored on its own line in the file:
 
+. In your home directory, locate and open your `.git-credentials` file if you already have it. Alternatively, if you do not have this file, save a new `.git-credentials` file, using the link:https://git-scm.com/docs/git-credential-store#_storage_format[Git credentials storage format]. Each credential is stored on its own line in the file:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
@@ -38,8 +39,6 @@ pass:a,c,q[https://trailblazer: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@github.c
 +
 [TIP]
 ====
-CLI users can use the `base64` command as needed:
-
 * To encode all lines in the file:
 +
 `$ cat .git-credentials | base64 | tr -d '\n'`
@@ -75,17 +74,11 @@ data:
 You can create and apply multiple Git credentials Secrets in your user {orch-namespace}. All of them will be copied into one Secret that will be mounted to the `{devworkspace}` containers. For example, if you set the mount path to `/etc/secret`, then the one Secret with all of your Git credentials will be mounted at `/etc/secret/credentials`. You must set all Git credentials Secrets in your user {orch-namespace} to the same mount path. You can set the mount path to an arbitrary path because the mount path will be automatically set in the Git configuration file configured at `/etc/gitconfig`.
 ====
 
-. Use the CLI or GUI to apply the Secret to the {orch-name} cluster of your organization's {prod-short} instance.
-
+. Apply the Secret:
 +
-[TIP]
-====
-CLI users can apply the Secret with `{orch-cli}`:
-
 [subs="+quotes,+attributes,+macros"]
 ----
 $ {orch-cli} apply -f - <<EOF
 __<Secret_prepared_in_the_previous_step>__
 EOF
 ----
-====
