--- a/modules/end-user-guide/partials/proc_creating-an-image-pull-secret-from-a-.dockercfg-file.adoc
+++ b/modules/end-user-guide/partials/proc_creating-an-image-pull-secret-from-a-.dockercfg-file.adoc
@@ -5,22 +5,19 @@ If you already store the credentials for the private container registry in a `.d
 
 .Prerequisites
 
-* You have GUI or CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
-* For CLI users: The `{orch-cli}` and link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+
+* link:https://www.gnu.org/software/coreutils/base64[`base64`] command line tools are installed in the operating system you are using.
 
 .Procedure
 
-. Encode the `.dockercfg` file to Base64. 
+. Encode the `.dockercfg` file to Base64:
 +
-[TIP]
-====
-CLI users can use the `base64` command as needed:
-
-`$ cat .dockercfg | base64 | tr -d '\n'`
-====
+----
+$ cat .dockercfg | base64 | tr -d '\n'
+----
 
 . Create a new {orch-name} Secret in your user {orch-namespace}:
-
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
@@ -36,17 +33,11 @@ data:
 type: kubernetes.io/dockercfg
 ----
 
-. Use the CLI or GUI to apply the Secret to the {orch-name} cluster of your organization's {prod-short} instance.
-
+. Apply the Secret:
 +
-[TIP]
-====
-CLI users can apply the Secret with `{orch-cli}`:
-
 [subs="+quotes,+attributes,+macros"]
 ----
 $ {orch-cli} apply -f - <<EOF
 __<Secret_prepared_in_the_previous_step>__
 EOF
 ----
-====
