--- a/modules/end-user-guide/partials/proc_creating-an-image-pull-secret-with-cli.adoc
+++ b/modules/end-user-guide/partials/proc_creating-an-image-pull-secret-with-cli.adoc
@@ -3,8 +3,7 @@
 
 .Prerequisites
 
-* You have CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
-* The `{orch-cli}` command line tool is installed in the operating system you are using.
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 .Procedure
 
