--- a/modules/administration-guide/pages/configuring-che-hostname.adoc
+++ b/modules/administration-guide/pages/configuring-che-hostname.adoc
@@ -11,7 +11,8 @@ This procedure describes how to configure {prod-short} to use custom hostname.
 
 .Prerequisites
 
-* The `{orch-cli}` tool is available.
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+
 * The certificate and the private key files are generated.
 
 IMPORTANT: To generate the pair of a private key and certificate, the same certification authority (CA) must be used as for other {prod-short} hosts.
@@ -62,3 +63,10 @@ spec:
 <2> The TLS secret name
 
 . If {prod-short} has been already deployed, wait until the rollout of all {prod-short} components finishes.
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
