--- a/modules/administration-guide/pages/configuring-ingresses.adoc
+++ b/modules/administration-guide/pages/configuring-ingresses.adoc
@@ -11,7 +11,8 @@ Some organizations require labels and annotations on each{orch-ingress}. This pr
 
 .Prerequisites
 
-* The `{orch-cli}` tool is available.
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+
 * An instance of {prod-short} running in {orch-name}.
 
 .Procedure
@@ -44,3 +45,10 @@ $ {orch-cli} patch checluster/{prod-checluster} -n {prod-namespace} --type=json 
 '[{"op": "replace", "path": "/spec/server/customCheProperties/CHE_INFRA_KUBERNETES_INGRESS_ANNOTATIONS______JSON", '\
 '"value": "__<annotations for a workspace ingress in json format>__"}]'
 ----
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
