--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -61,3 +61,10 @@ $ {orch-cli} patch checluster/{prod-checluster} -n {prod-namespace} --type=json 
 [http "https://10.33.177.118:3000"]
 sslCAInfo = /etc/che/git/cert/ca.crt
 ----
+
+.Additional resources
+
+* xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
+
