--- a/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
+++ b/modules/administration-guide/pages/installing-che-on-codeready-containers.adoc
@@ -14,10 +14,14 @@ You can create a single-node OpenShift cluster for deploying a {prod-short} inst
 
 .Prerequisites
 
-* The `{prod-cli}` management tool is available. See xref:installing-the-chectl-management-tool.adoc[].
+* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
+
 * A running instance of CodeReady Containers. See link:https://console.redhat.com/openshift/create/local[Installing CodeReady Containers].```
+
 * The filepath of the user's CodeReady Containers pull secret.
+
 * Available memory is 12 GB or more.
+
 * Available disk size is 64 GB or more.
 
 .Procedure
