--- a/modules/administration-guide/pages/installing-the-chectl-management-tool.adoc
+++ b/modules/administration-guide/pages/installing-the-chectl-management-tool.adoc
@@ -10,7 +10,7 @@
 
 :context: using-the-{prod-cli}-management-tool
 
-"You can install `{prod-cli}`, the {prod} command-line management tool, on Microsoft Windows, Apple MacOS, and Linux. With `{prod-cli}`, you can perform operations the {prod-short} server such as starting, stopping, updating, and deleting the server.
+You can install `{prod-cli}`, the {prod} command-line management tool, on Microsoft Windows, Apple MacOS, and Linux. With `{prod-cli}`, you can perform operations the {prod-short} server such as starting, stopping, updating, and deleting the server.
 
 include::example$proc_{project-context}-installing-the-chectl-management-tool-on-windows.adoc[leveloffset=+1]
 
