--- a/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
@@ -9,17 +9,20 @@
 To configure a running instance of {prod-short}, edit the `CheCluster` Custom Resource YAML file. 
 
 .Prerequisites
+
 * An instance of {prod-short} on {platforms-name}.
-* Access to an administrator account on the instance of {platforms-name}.
-* The `oc` tool is available.
+
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 .Procedure
+
 . Edit the CheCluster Custom Resource on the cluster:
 +
 [subs="+attributes"]
 ----
-$ oc edit checluster/eclipse-che -n {prod-namespace}
+$ {orch-cli} edit checluster/eclipse-che -n {prod-namespace}
 ----
+
 . Save and close the file to apply the changes.
 
 .Verification
@@ -28,13 +31,13 @@ $ oc edit checluster/eclipse-che -n {prod-namespace}
 +
 [subs="+attributes,quotes"]
 ----
-$ oc get configmap che -o jsonpath='{.data._<configured-property>_}' \
+$ {orch-cli} get configmap che -o jsonpath='{.data._<configured-property>_}' \
 -n {prod-namespace}
 ----
 
 [role="_additional-resources"]
 .Additional resources
 
-* xref:understanding-the-checluster-custom-resource.adoc[].
+* xref:checluster-custom-resource-fields-reference.adoc[].
 
 * xref:advanced-configuration-options-for-the-che-server-component.adoc[].
