--- a/modules/end-user-guide/pages/mounting-secrets.adoc
+++ b/modules/end-user-guide/pages/mounting-secrets.adoc
@@ -13,9 +13,9 @@ Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name}
 
 .Prerequisites
 
-* You have GUI or CLI access to the {orch-name} cluster of your organization's {prod-short} instance.
+* An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
+
 * You have created a new Secret or determined an existing one in your user {orch-namespace} to mount to all `{devworkspace}` containers.
-* For CLI users: The `{orch-cli}` command line tool is installed in the operating system you are using.
 
 .Procedure
 
@@ -23,17 +23,12 @@ Mount {kubernetes} Secrets to the `{devworkspace}` containers in the {orch-name}
 
 . Set the required labels for mounting.
 +
-[TIP]
-====
-CLI users can run `{orch-cli}`: 
-
 [subs="+quotes,+attributes,+macros"]
 ----
 $ {orch-cli} label secret __<Secret_name>__ \
         controller.devfile.io/mount-to-devworkspace=true \
         controller.devfile.io/watch-secret=true
 ----
-====
 
 . Optional: Use the annotations to configure how the Secret is mounted.
 +
